modified controlCenter page and others

--- a/public/css/customer_details.css
+++ b/public/css/customer_details.css
@@ -10,6 +10,8 @@ body {
   overflow-x: hidden;
   overflow-y: scroll;
   width: 100%;
+  background: #2e2e2e;
+  color: white;
 }
 
 ul, ol, li {
@@ -21,7 +23,7 @@ a {
 }
 
 body {
-  color: white;
+  color: #ffffff;
 }
 
 .form-banner-container {
