--- a/public/css/profiling.css
+++ b/public/css/profiling.css
@@ -455,7 +455,7 @@
 
 .profiling-overlay .item-profiling-wrapper .item-profiling .item-profiling-container .profiling-container .profiling-container-B .profiling-content-wrapper .prof-cart-btn {
   position: relative;
-  background: white;
+  background: #ffffff;
   color: black;
   padding: 10px;
   width: 100%;
