--- a/public/sass/variables.scss
+++ b/public/sass/variables.scss
@@ -13,6 +13,7 @@ $cc-color-yellow: #ffff00;
 $cc-color-lightRed: #ff2d2d;
 $cc-color-lightblue: #4a4af7;
 $cc-color-lightgreen: #06be06;
+$cc-orange: orange;
 $cc-color-post: #ffffffa2;
 $cc-main-color: white;
 $cc-red: red;
