--- a/public/css/index.css
+++ b/public/css/index.css
@@ -10,6 +10,8 @@ body {
   overflow-x: hidden;
   overflow-y: scroll;
   width: 100%;
+  background: #2e2e2e;
+  color: white;
 }
 
 ul, ol, li {
@@ -22,7 +24,7 @@ a {
 
 body {
   background: #2e2e2e;
-  color: white;
+  color: #ffffff;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   overflow-x: hidden;
   overflow-y: scroll;
