--- a/public/css/navigation.css
+++ b/public/css/navigation.css
@@ -1,6 +1,6 @@
 body {
   background: #2e2e2e;
-  color: white;
+  color: #ffffff;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   overflow-x: hidden;
   overflow-y: scroll;
