update of codes

--- a/public/css/@keyframes.css
+++ b/public/css/@keyframes.css
@@ -1,14 +1,3 @@
-@-webkit-keyframes cartOverallMovement {
-  0% {
-    right: -100px;
-  }
-  50% {
-    right: 100px;
-  }
-  100% {
-    right: -100px;
-  }
-}
 @keyframes cartOverallMovement {
   0% {
     right: -100px;
@@ -19,4 +8,4 @@
   100% {
     right: -100px;
   }
-}
+}/*# sourceMappingURL=@keyframes.css.map */
