--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,8 +1,7 @@
 *, html, body, ul, ol *::after, *::before {
   padding: 0;
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -28,15 +27,9 @@ a {
   width: 35px;
   height: 35px;
   right: 0px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   z-index: 5;
   border-radius: 20px;
   -webkit-border-radius: 20px;
@@ -44,15 +37,14 @@ a {
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
   color: white;
-  transition: .1s ease;
-  -webkit-transition: .1s ease;
-  -moz-transition: .1s ease;
-  -ms-transition: .1s ease;
-  -o-transition: .1s ease;
+  transition: 0.1s ease;
+  -webkit-transition: 0.1s ease;
+  -moz-transition: 0.1s ease;
+  -ms-transition: 0.1s ease;
+  -o-transition: 0.1s ease;
   background: green;
   overflow: hidden;
 }
-
 .admin-btn-container .admin-tip {
   margin-right: 40px;
   margin-left: 0px;
@@ -60,7 +52,6 @@ a {
   visibility: hidden;
   opacity: 0;
 }
-
 .admin-btn-container .admin-btn {
   position: fixed;
   top: 150px;
@@ -74,23 +65,16 @@ a {
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
   z-index: 5;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
-  transition: .1s ease;
-  -webkit-transition: .1s ease;
-  -moz-transition: .1s ease;
-  -ms-transition: .1s ease;
-  -o-transition: .1s ease;
+  transition: 0.1s ease;
+  -webkit-transition: 0.1s ease;
+  -moz-transition: 0.1s ease;
+  -ms-transition: 0.1s ease;
+  -o-transition: 0.1s ease;
 }
-
 .admin-btn-container .admin-btn .admin-icon {
   position: relative;
   top: 0px;
@@ -107,20 +91,20 @@ a {
   width: 120px;
   height: 35px;
   background: black;
-  transition: .1s ease;
-  -webkit-transition: .1s ease;
-  -moz-transition: .1s ease;
-  -ms-transition: .1s ease;
-  -o-transition: .1s ease;
+  transition: 0.1s ease;
+  -webkit-transition: 0.1s ease;
+  -moz-transition: 0.1s ease;
+  -ms-transition: 0.1s ease;
+  -o-transition: 0.1s ease;
 }
 
 .admin-btn-container.tip-on .admin-tip {
   visibility: visible;
-  transition: .1s ease;
-  -webkit-transition: .1s ease;
-  -moz-transition: .1s ease;
-  -ms-transition: .1s ease;
-  -o-transition: .1s ease;
+  transition: 0.1s ease;
+  -webkit-transition: 0.1s ease;
+  -moz-transition: 0.1s ease;
+  -ms-transition: 0.1s ease;
+  -o-transition: 0.1s ease;
   opacity: 1;
 }
 
@@ -131,15 +115,13 @@ a {
   width: 100%;
   background: red;
   z-index: 70;
-  transition: .2s ease-in-out;
-  -webkit-transition: .2s ease-in-out;
-  transition: .2s ease;
-  -webkit-transition: .2s ease;
-  -moz-transition: .2s ease;
-  -ms-transition: .2s ease;
-  -o-transition: .2s ease;
+  transition: 0.2s ease-in-out;
+  transition: 0.2s ease;
+  -webkit-transition: 0.2s ease;
+  -moz-transition: 0.2s ease;
+  -ms-transition: 0.2s ease;
+  -o-transition: 0.2s ease;
 }
-
 .admin-container .admin-wrapper {
   position: relative;
   top: 0px;
@@ -147,14 +129,13 @@ a {
   width: 100%;
   height: 100vh;
   background: rgba(0, 0, 0, 0.562);
-  transition: .5s ease;
-  -webkit-transition: .5s ease;
-  -moz-transition: .5s ease;
-  -ms-transition: .5s ease;
-  -o-transition: .5s ease;
+  transition: 0.5s ease;
+  -webkit-transition: 0.5s ease;
+  -moz-transition: 0.5s ease;
+  -ms-transition: 0.5s ease;
+  -o-transition: 0.5s ease;
   /************* SIGN-IN-OU ************/
 }
-
 .admin-container .admin-wrapper .admin-close {
   position: absolute;
   top: 0px;
@@ -164,20 +145,13 @@ a {
   /*background: peru;*/
   margin-right: 20px;
   margin-top: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
   z-index: 10;
   display: none;
 }
-
 .admin-container .admin-wrapper .admin-close div {
   width: 40px;
   height: 40px;
@@ -186,56 +160,34 @@ a {
   background-repeat: var(--br);
   background-size: var(--bs-cover);
 }
-
 .admin-container .admin-wrapper .signIn-signOut {
   position: relative;
   width: 100%;
   height: 100vh;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign {
   position: relative;
   width: 100%;
   height: 100vh;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 150%;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap {
   z-index: 5;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap div {
   line-height: 3rem;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap .media-banner {
   position: relative;
   width: 100%;
@@ -247,7 +199,6 @@ a {
   -ms-transition: 2s ease;
   -o-transition: 2s ease;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap .media-banner .user-image-container {
   position: relative;
   width: 100px;
@@ -258,8 +209,7 @@ a {
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
-  -ms-flex-line-pack: center;
-      align-content: center;
+  align-content: center;
   transform: scale(0) translateX(-300px) translateY(-100px);
   -webkit-transform: scale(0) translateX(-300px) translateY(-100px);
   -moz-transform: scale(0) translateX(-300px) translateY(-100px);
@@ -268,21 +218,13 @@ a {
   opacity: 0;
   overflow: hidden;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap .media-banner .user-image-container .user-image {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   width: 100px;
   height: 100px;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap .media-banner .user-image-container .user-image img {
   position: relative;
   width: 80px;
@@ -293,7 +235,6 @@ a {
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap .media-banner .user-image-container.fade-left {
   opacity: 1;
   transform: scale(1) translateX(50%) translateY(0px);
@@ -307,7 +248,6 @@ a {
   -ms-transition: 2s ease;
   -o-transition: 2s ease;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap .media-banner .welcome-note {
   position: relative;
   font-size: 30px;
@@ -325,7 +265,6 @@ a {
   -ms-transition: 2s ease;
   -o-transition: 2s ease;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap .media-banner .welcome-note.fade-right {
   opacity: 1;
   transform: scale(1) translateX(0px) translateY(0px);
@@ -339,7 +278,6 @@ a {
   -ms-transition: 2s ease;
   -o-transition: 2s ease;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap .media-banner.visible {
   display: block;
   opacity: 1;
@@ -349,7 +287,6 @@ a {
   -ms-transition: 2s ease;
   -o-transition: 2s ease;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap .content-title {
   font-size: 30px;
   font-weight: 600;
@@ -362,7 +299,6 @@ a {
   -ms-transition: 2s ease;
   -o-transition: 2s ease;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap .content-title.off {
   display: none;
   opacity: 0;
@@ -372,20 +308,13 @@ a {
   -ms-transition: 2s ease;
   -o-transition: 2s ease;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap .cell {
   position: relative;
   width: 350px;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  flex-direction: row;
   overflow: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   background: white;
   margin: 20px auto;
   border-radius: 50px;
@@ -394,7 +323,6 @@ a {
   -ms-border-radius: 50px;
   -o-border-radius: 50px;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap .cell label {
   color: black;
   position: relative;
@@ -413,11 +341,9 @@ a {
   -o-border-radius: 50%;
   background-color: black;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap .cell .admin-icon {
   background-image: url("../img/icons/user.png");
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap .cell input {
   padding: 10px 20px;
   outline: none;
@@ -430,16 +356,13 @@ a {
   font-size: 14px;
   font-weight: 600;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap .cell input:focus {
   border: none;
   outline: none;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap .cell .red-notice {
   border: 4px solid red;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap .cell .checker {
   position: absolute;
   top: 0px;
@@ -454,35 +377,30 @@ a {
   z-index: 3;
   visibility: hidden;
   opacity: 0;
-  transition: .2s ease;
-  -webkit-transition: .2s ease;
-  -moz-transition: .2s ease;
-  -ms-transition: .2s ease;
-  -o-transition: .2s ease;
+  transition: 0.2s ease;
+  -webkit-transition: 0.2s ease;
+  -moz-transition: 0.2s ease;
+  -ms-transition: 0.2s ease;
+  -o-transition: 0.2s ease;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap .cell .checker.visible {
   visibility: visible;
   opacity: 1;
-  transition: .2s ease;
-  -webkit-transition: .2s ease;
-  -moz-transition: .2s ease;
-  -ms-transition: .2s ease;
-  -o-transition: .2s ease;
+  transition: 0.2s ease;
+  -webkit-transition: 0.2s ease;
+  -moz-transition: 0.2s ease;
+  -ms-transition: 0.2s ease;
+  -o-transition: 0.2s ease;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap .cell .admin-checker {
   background-image: url("../img/icons/checker.png");
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap .cell .pass-checker {
   background-image: url("../img/icons/checker.png");
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap .cell .pass-icon {
   background-image: url("../img/icons/key.png");
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1) .content-wrap .submit button {
   padding: 10px 100px 10px 100px;
   background: #b90404;
@@ -499,7 +417,6 @@ a {
   font-weight: 600;
   cursor: pointer;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1)::before {
   position: absolute;
   content: "";
@@ -512,7 +429,6 @@ a {
   background-size: cover;
   background-image: url("../img/index/banner/sign-banner.jpg");
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(1)::after {
   position: absolute;
   content: "";
@@ -523,7 +439,6 @@ a {
   background: rgba(0, 0, 0, 0.65);
   z-index: 2;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(2) .sign-banner {
   position: absolute;
   bottom: -100px;
@@ -537,7 +452,6 @@ a {
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(2) .sign-banner .login-in-icon, .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(2) .sign-banner .login-out-icon {
   position: relative;
   top: -200px;
@@ -545,7 +459,6 @@ a {
   width: 700px;
   height: 500px;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(2) .sign-banner .login-in-icon.shrink {
   top: -100px;
   left: -100px;
@@ -560,7 +473,6 @@ a {
   -ms-transition: 1s ease;
   -o-transition: 1s ease;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(2) .sign-banner .sign-out-btn, .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(2) .sign-banner .sign-in-btn {
   position: absolute;
   top: 13rem;
@@ -577,7 +489,6 @@ a {
   cursor: pointer;
   z-index: 2;
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(2) .sign-banner .sign-out-btn:hover, .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(2) .sign-banner .sign-in-btn:hover {
   transform: scale(1.05);
   -webkit-transform: scale(1.05);
@@ -585,7 +496,6 @@ a {
   -ms-transform: scale(1.05);
   -o-transform: scale(1.05);
 }
-
 .admin-container .admin-wrapper .signIn-signOut .signIn-container .sign:nth-child(2) .sign-banner.close {
   width: 300px;
   height: 300px;
@@ -603,11 +513,11 @@ a {
   -moz-transform: translateX(0px);
   -ms-transform: translateX(0px);
   -o-transform: translateX(0px);
-  transition: .5s ease-in-out;
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -ms-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
+  transition: 0.5s ease-in-out;
+  -webkit-transition: 0.5s ease-in-out;
+  -moz-transition: 0.5s ease-in-out;
+  -ms-transition: 0.5s ease-in-out;
+  -o-transition: 0.5s ease-in-out;
   opacity: 1;
 }
 
@@ -618,10 +528,10 @@ a {
   -moz-transform: translateX(0px);
   -ms-transform: translateX(0px);
   -o-transform: translateX(0px);
-  transition: .5s ease-in-out;
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -ms-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
+  transition: 0.5s ease-in-out;
+  -webkit-transition: 0.5s ease-in-out;
+  -moz-transition: 0.5s ease-in-out;
+  -ms-transition: 0.5s ease-in-out;
+  -o-transition: 0.5s ease-in-out;
   opacity: 1;
-}
+}/*# sourceMappingURL=admin.css.map */
