--- a/public/css/invoice.css
+++ b/public/css/invoice.css
@@ -1,8 +1,7 @@
 *, html, body, ul, ol *::after, *::before {
   padding: 0;
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -33,24 +32,16 @@ a {
   overflow: hidden;
   display: none;
 }
-
 .invoice-wrapper .invoice-container {
   position: relative;
   width: 100%;
   height: 100%;
   /*background: white;*/
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   /* background: peru;*/
 }
-
 .invoice-wrapper .invoice-container .invoice-content {
   position: relative;
   width: 100%;
@@ -59,7 +50,6 @@ a {
   overflow-x: hidden;
   overflow-y: scroll;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice {
   position: relative;
   /*background: green;*/
@@ -67,27 +57,19 @@ a {
   height: 100%;
   margin-left: 2.5%;
   margin-right: 2.5%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  flex-direction: row;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap {
   position: relative;
   width: 100%;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container {
   position: relative;
   width: 90%;
   margin-left: 5%;
   margin-right: 5%;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .watermark {
   position: fixed;
   z-index: 99;
@@ -103,52 +85,42 @@ a {
   -o-transform: rotate(-45deg);
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-header-wrap {
   position: relative;
   padding: 35px;
   border: 5px solid black;
   margin-top: 10px;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-header-wrap div {
   position: relative;
   font-weight: bolder;
   color: black;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-header-wrap div span {
   font-weight: 500;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-header-wrap div:nth-child(1) {
   font-size: 3.5rem;
   text-transform: uppercase;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-header-wrap div:nth-child(2) {
   margin-top: 20px;
   font-size: 18px;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-header-wrap div:nth-child(3), .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-header-wrap div:nth-child(4) {
   font-size: 18px;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .client-wrapper-media {
   position: relative;
   width: 100%;
-  background: #ececec;
+  background: rgb(236, 236, 236);
   display: none;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .client-wrapper-media div {
   position: relative;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .client-wrapper-media .header {
   position: relative;
   font-size: 20px;
@@ -157,96 +129,65 @@ a {
   color: black;
   font-weight: 500;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .client-wrapper-media .client-container-media {
   width: 100%;
   height: 100%;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
-  grid-gap: .1rem;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 0.1rem;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .client-wrapper-media .client-container-media li {
   font-size: 11px;
   margin: 2px;
   color: black;
   font-style: italic;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-payment-wrap {
   position: relative;
   margin-top: 20px;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-payment-wrap div {
   position: relative;
   line-height: 1.2rem;
   color: black;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-payment-wrap div span {
   font-weight: 500;
   margin-right: 10px;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-payment-wrap div .in-status {
-  color: #f82424;
+  color: rgb(248, 36, 36);
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-payment-wrap div:nth-child(1) {
   font-size: 20px;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-payment-wrap div:nth-child(2) {
   margin-top: 20px;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-table-wrap {
   position: relative;
   width: 100%;
   margin-top: 30px;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-table-wrap div {
   position: relative;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-table-wrap .invoice-table-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-table-wrap .invoice-table-header div {
   color: black;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: flex-start;
+  align-items: center;
   font-size: 18px;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-table-wrap .invoice-table-header div:nth-child(1) {
   width: 40%;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-table-wrap hr {
   height: 1vh;
   background: black;
@@ -254,163 +195,95 @@ a {
   margin-top: 10px;
   margin-bottom: 10px;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-table-wrap .invoice-item-wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-table-wrap .invoice-item-wrap .invoice-item-cell {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
-  background: #ececec;
+  background: rgb(236, 236, 236);
   padding: 2px;
   margin: 2px;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-table-wrap .invoice-item-wrap .invoice-item-cell div {
   color: black;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: flex-start;
+  align-items: center;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-table-wrap .invoice-item-wrap .invoice-item-cell div:nth-child(1) {
   width: 40%;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-table-wrap .invoice-summation-wrap {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-table-wrap .invoice-summation-wrap div {
   color: black;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-table-wrap .invoice-summation-wrap .summation-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-table-wrap .invoice-summation-wrap .summation-container div {
   position: relative;
   text-transform: uppercase;
   font-size: 12px;
   margin: 5px;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-table-wrap .invoice-summation-wrap .summation-container div:nth-child(2) {
   font-weight: bolder;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-table-wrap .invoice-summation-wrap .summation-container div:nth-child(3) {
   font-size: 9px;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-table-wrap .invoice-summation-wrap .summation-footer div {
   font-size: 11px;
   line-height: 1.1rem;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-table-wrap .invoice-summation-wrap .summation-footer div:nth-child(1) {
   margin-bottom: 5px;
   margin-top: 10px;
   font-weight: 550;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice-client-logo {
   position: relative;
   width: 40%;
   height: 100vh;
-  background: #ececec;
+  background: rgb(236, 236, 236);
   overflow: hidden;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice-client-logo div {
   position: relative;
   color: black;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice-client-logo .logo-wrap {
   position: relative;
   padding: 20px;
   /*background: red;*/
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   border: 5px solid black;
   top: 10px;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice-client-logo .logo-wrap div {
   position: relative;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice-client-logo .logo-wrap div:nth-child(1) {
   width: 100px;
   height: 100px;
@@ -421,69 +294,46 @@ a {
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice-client-logo .client-wrapper {
   width: 100%;
   margin-top: 30px;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice-client-logo .client-wrapper .client-container {
   position: relative;
   width: 90%;
   margin-left: 5%;
   margin-right: 5%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice-client-logo .client-wrapper .client-container div {
   color: black;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice-client-logo .client-wrapper .client-container div span {
   font-size: 13px;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice-client-logo .client-wrapper .client-container .client-name {
   font-size: 20px;
   font-weight: 550;
-  letter-spacing: .1px;
+  letter-spacing: 0.1px;
   text-transform: uppercase;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice-client-logo .client-wrapper .client-container .client-tel {
   margin-top: 10px;
   margin-bottom: 10px;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice-client-logo .client-wrapper .client-container .client-others {
   margin-bottom: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  flex-direction: column;
+  justify-content: flex-start;
 }
-
 .invoice-wrapper .invoice-container .invoice-content .invoice-client-logo .client-wrapper .client-container .client-others span {
   line-height: 1.2rem;
 }
 
 .invoice-wrapper.on {
   display: block;
-}
+}/*# sourceMappingURL=invoice.css.map */
