--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -1,8 +1,7 @@
 *, html, body, ul, ol *::after, *::before {
   padding: 0;
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -20,4 +19,4 @@ ul, ol, li {
 
 a {
   text-decoration: none;
-}
+}/*# sourceMappingURL=reset.css.map */
